@@ -5,13 +5,14 @@ TBD
 ---
 
 * Remove dependency on terminaltables
+* Add psql_unicode table format
 
 Version 2.1.0
 -------------
 
 (released on 2020-07-29)
 
-* Speed up ouput styling of tables.
+* Speed up output styling of tables.
 
 Version 2.0.1
 -------------
